# pcl

./: .gitignore  CMakeLists.txt  readme.md
include/: point_cloud_processor.h
src/: BatchConditionalFilter.cpp  ConditionalFilter.cpp  CropBox.cpp  GridStats.cpp  HandEyeCameraPoseTransform.cpp  Poly_example.cpp  convex.cpp  crop_cube.txt  cropbox.cpp  cropbox_new.cpp  cropcloud.cpp  cylinder.cpp  findMinMaxPointOnAxis.cpp  fit_circle.cpp  getEdges.cpp  moment_of_inertia.cpp  newBatchConditionalFilter.cpp  newGridStats.cpp  plane_fit_compare.cpp  point_cloud_processor.cpp  removeinvalidpoints.cpp  showplane.cpp  showplane1.cpp  showvector.cpp  trans3.cpp  transform.cpp  transform1.cpp  visualizeplane.cpp
src/Filtering/: passthrough.cpp  voxel_grid.cpp
